--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <td><img src="elango2.png" alt="elango's profile picture" width=180></td>
       <td>
         <h1>ELANGO K</h1>
-        <p><em>CEO Of <strong>INDIA</strong>.</em></p>
+    
         <big>
-          <p>I Am A Full Stack Webdeveloper. I❤️Love Tea.
+          <p>I Am A Frontend developer. I❤️Love Tea.
         </big>
       </td>
     </tr>
